# AI

./: CMakeLists.txt  README.md  data.txt  main.cpp
Modules/: sentence.cpp  sentence.h  string_convert.cpp  string_convert.h  utfstring.cpp  utfstring.h  word.cpp  word.h
